[gd_scene load_steps=4 format=3 uid="uid://2xsxjnhchl5l"]

[ext_resource type="Script" uid="uid://cwnyal7gvqmfm" path="res://match.gd" id="1_a1ov8"]
[ext_resource type="Theme" uid="uid://dlxjiwsk6r3y5" path="res://themes/header.tres" id="2_ru5bp"]
[ext_resource type="Theme" uid="uid://fx8rk3uqw885" path="res://themes/big_button.tres" id="3_pq8d4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a1ov8")

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(0, 216)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -163.5
offset_right = 163.5
offset_bottom = 216.0
grow_horizontal = 2
theme = ExtResource("2_ru5bp")
text = "Match"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="."]
custom_minimum_size = Vector2(0, 432)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -54.0
offset_top = -432.0
offset_right = 54.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/h_separation = 32
columns = 4

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(1152, 216)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("2_ru5bp")
theme_override_constants/separation = 576
alignment = 1

[node name="TimerLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "0.0"

[node name="ScoreLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "0/1"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="RestartButton" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(324, 324)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -108.0
offset_right = 162.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_pq8d4")
text = "Restart"
